adding gets routes
