# src/routes/v1/news.js
@@ -3,6 +3,8 @@ const router = express.Router();
 const newsController = require('../../controllers/newsController');
 const auth = require('../../middleware/auth');
 
+router.get('/news', newsController.getNews);
+router.get('/news/:newsId', newsController.getNewsById);
 router.post('/news', auth, newsController.post);
 
 module.exports = router;
